--- a/kankan/css/wu.css
+++ b/kankan/css/wu.css
@@ -1003,19 +1003,31 @@
     .bottomStyle {
         bottom: 2.3rem !important;
     }
+    .transIntroImg {
+    	margin-left: 12%;
+    }
 }
 @media screen and (min-width: 321px) and (max-width: 360px) {
     .bottomStyle {
         bottom: 2.5rem !important;
+    }
+    .transIntroImg {
+    	margin-left: 12%;
     }
 }
 @media screen and (min-width: 361px) and (max-width: 768px){
     .bottomStyle {
         bottom: 2.2rem !important;
     }
+    .transIntroImg {
+    	margin-left: 15%;
+    }
 }
 @media screen and (min-width: 768px) {
     .bottomStyle {
         bottom: 2.3rem !important;
+    }
+    .transIntroImg {
+    	margin-left: 15%;
     }
 }
